// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty list renders correctly 1`] = `
<ul
  className="lui-list"
/>
`;

exports[`List passes props correctly 1`] = `
<ul
  className="lui-list my-class"
  data-x="x"
>
  <li
    className="lui-list__header"
  >
    Header
  </li>
  <li
    className="lui-list__item"
    data-x="x"
    disabled={undefined}
    onClick={[Function]}
    title="Item title"
  >
    Item
  </li>
</ul>
`;

exports[`List with item custom content renders correctly 1`] = `
<ul
  className="lui-list"
>
  <li
    className="lui-list__item"
    disabled={undefined}
  >
    <div
      className="lui-list__aside"
    >
      Aside
    </div>
    <div
      className="lui-list__text"
    >
      Text
    </div>
  </li>
</ul>
`;

exports[`List with items renders correctly 1`] = `
<ul
  className="lui-list"
>
  <li
    className="lui-list__header"
  >
    Header
  </li>
  <li
    className="lui-list__item"
    disabled={undefined}
  >
    Item 1
  </li>
  <li
    className="lui-list__item lui-active"
    disabled={undefined}
  >
    Item 1
  </li>
  <li
    className="lui-list__item lui-disabled"
    disabled={true}
  >
    Item 1
  </li>
</ul>
`;
